# chalk_rs

./: Cargo.toml  LICENSE.md  Makefile.toml  README.md  lib  output  output.txt  rustfmt.toml
doc/: search-index.js  source-files.js
doc/chalk_rs/: all.html  index.html  macro.enum_display!.html  macro.enum_fmt_impl!.html  macro.enum_impls!.html  macro.enum_impls.html  macro.impl_chalk_style.html  macro.impl_chalk_traits!.html  macro.impl_chalk_traits.html  macro.set_style.html  macro.set_styles!.html  macro.set_styles.html  sidebar-items.js  trait.Chalk.html
doc/chalk_rs/ansi_chalk/: index.html  sidebar-items.js  struct.AnsiChalk.html  trait.ChalkAnsiColor.html
doc/chalk_rs/basic_chalk/: index.html  struct.BasicChalk.html  trait.ChalkBasicColor.html
doc/chalk_rs/prelude/: index.html
doc/chalk_rs/rgb_chalk/: index.html  struct.RgbChalk.html  struct.RgbColor.html  trait.ChalkRgbColor.html
doc/chalk_rs/style/: enum.Style.html  index.html  sidebar-items.js  struct.StyleMap.html  trait.ChalkStyle.html
doc/doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/doc/chalk_rs/: all.html  index.html  macro.chalk_trait_fns!.html  macro.chalk_trait_fns.html  macro.enum_default!.html  macro.enum_display.html  (+5 more)
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/chalk_rs/: all.html  index.html  macro.add_style!.html  macro.add_style.html  macro.chalk_trait_fns.html  macro.enum_default.html  macro.enum_fmt_impl.html  macro.fn_alias!.html  macro.fn_alias.html  macro.impl_chalk_style.html  macro.impl_chalk_traits.html  macro.impl_style_string.html  macro.set_style.html  sidebar-items.js  trait.Chalk.html
docs/lib/: all.html  index.html  macro.add_style.html  macro.chalk_trait_fns.html  macro.enum_default.html  macro.enum_display.html  macro.enum_fmt_impl.html  macro.enum_impls.html  macro.fn_alias.html  macro.impl_chalk_style!.html  macro.impl_chalk_style.html  macro.impl_chalk_traits.html  macro.impl_style_string!.html  macro.impl_style_string.html  macro.set_style!.html  macro.set_style.html  sidebar-items.js  trait.Chalk.html
examples/: ansi_color.rs  basic_color.rs  pride.rs  rgb_color.rs  style.rs
src/: ansi_chalk.rs  basic_chalk.rs  lib.rs  prelude.rs  rgb_chalk.rs  style.rs  tests.rs  utils.rs
(+119 files in other folders)
