[package]
name = "chalk_rs"
version = "1.0.1"
authors = ["Botahamec <botahamec@outlook.com>"]
edition = "2018"
description = "A crate which adds colors and styles to your terminal program"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/mrw1593/chalk_rs"
keywords = ["chalk", "color", "style", "terminal", "cli"]
categories = ["command-line-interface"]
exclude = [
	".github/*",
	"doc/*",
	"Makefile.toml",
	"rustfmt.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features = ["consoleapi", "processenv", "winbase"]}

[dependencies]
serde = {version = "1", features=["derive"], optional=true}

[profile.release]
lto = true
